--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.5",
     "@react-navigation/native": "^7.0.3",
+    "@react-navigation/stack": "^7.1.1",
     "@types/react-native": "^0.72.8",
     "expo": "~52.0.7",
     "expo-status-bar": "~2.0.0",
@@ -30,6 +31,7 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.0.8",
     "typescript": "^5.3.3"
   },
